--- a/app/container/Mainpage/Mainpage.css
+++ b/app/container/Mainpage/Mainpage.css
@@ -1,28 +1,61 @@
 .Mainpage{
-
-    height: 768px;
-    width: 1200px;
-    background-image: url("./background.png");
+    width: 100%;
+    height: 100%;
+    min-width: 1200px;
+    min-height: 768px;
+    /*flex: 1;*/
+    display: flex;
+    flex-direction: column;
+    background-image: url("background_pic/1.jpg");
+    background-size: 100% 100%;
 }
-.hi-icon{
+.Earth_logo {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.Earth_logo_container {
+    width: auto;
+    height: 100%;
+}
+.box {
+    transform: scale(0.8);
+}
+.Button_container {
+    width: 100%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+}
+.Button_container_row1, .Button_container_row2 {
+    width: 100%;
+    height: 50%;
+    padding: 0 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.Button {
+    width: 80px;
+    height: 130px;
+}
+.hi-icon1{
     position: relative;
-
     width: 80px;
     height: 80px;
     border-radius: 50%;
-
-    /*border:solid white;*/
-    background-image: url('41.png');
+    border:solid white;
+    background-image: url('1_1.png');
     background-color: rgba(255,255,255,0.1);
-
     background-size: cover;
-
     transition: background 0.2s, color 0.2s;
 }
-.hi-icon:after{
+.hi-icon1:after{
     content: '';
-    top: -5px;
-    left: -5px;
+    top: -8px;
+    left: -8px;
     /*padding: 5px;*/
     position: absolute;
     width: 90px;
@@ -33,24 +66,16 @@
     transform: scale(.8);
     opacity: 0;
 }
-.hi-icon:hover{
-    background-image: url("42.png");
+.hi-icon1:hover{
+    background-image: url("1_2.png");
     background-color: rgba(255,255,255,0);
-
-
-
-
-
-
 }
-.hi-icon:hover:after{
-
+.hi-icon1:hover:after{
     content: '';
     transform: scale(1);
-
     opacity: 1;
-
 }
+
 .text{
     width: 80px;
     font-size: 15px;
@@ -61,5 +86,310 @@
     text-transform: none;
     color: white;
     text-align: center;
-
+}
+.hi-icon2{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('2_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon2:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon2:hover{
+    background-image: url("2_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon2:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
+}
+.hi-icon3{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('3_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon3:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon3:hover{
+    background-image: url("3_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon3:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
+}
+.hi-icon4{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('4_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon4:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon4:hover{
+    background-image: url("4_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon4:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
+}
+.hi-icon5{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('5_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon5:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon5:hover{
+    background-image: url("5_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon5:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
+}
+.hi-icon6{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('6_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon6:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon6:hover{
+    background-image: url("6_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon6:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
+}
+.hi-icon7{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('7_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon7:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon7:hover{
+    background-image: url("7_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon7:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
+}
+.hi-icon8{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('8_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon8:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon8:hover{
+    background-image: url("8_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon8:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
+}
+.hi-icon9{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('9_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon9:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon9:hover{
+    background-image: url("9_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon9:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
+}
+.hi-icon10{
+    position: relative;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border:solid white;
+    background-image: url('10_1.png');
+    background-color: rgba(255,255,255,0.1);
+    background-size: cover;
+    transition: background 0.2s, color 0.2s;
+}
+.hi-icon10:after{
+    content: '';
+    top: -8px;
+    left: -8px;
+    /*padding: 5px;*/
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    box-shadow: 0 0 0 3px #fff;
+    transition: transform 0.2s, opacity 0.2s;
+    transform: scale(.8);
+    opacity: 0;
+}
+.hi-icon10:hover{
+    background-image: url("10_2.png");
+    background-color: rgba(255,255,255,0);
+}
+.hi-icon10:hover:after{
+    content: '';
+    transform: scale(1);
+    opacity: 1;
 }
